<resources>
    <string name="app_name">JointParty</string>
    <string name="apri">Apri</string>
    <string name="chiudi">Chiudi</string>
    <string name="descrizioneLeggi">LO STATO DELLA CANNABIS. DESCRIZIONE....................................................</string>
    <string name="titolo_metodo1">7 Semplici passaggi per coltivare l\'erba</string>
    <string name="sottoTitolo_metodo1_passo1">PASSO 1: SCEGLIERE I SEMI DI CANNABIS</string>
    <string name="contenuto_metodo1_passo1">La scelta a disposizione è straordinaria. Sativa, indica, ruderalis, ogni tipo di ibrido, tutto disponibile in un semplice click. Saprete già cosa vi piace dalla vostra esperienza personale. Quali varietà sono state più adatte al vostro umore e necessità in passato? Quali varietà hanno fornito un sollievo soddisfacente per i vostri disturbi fisici? Questo è probabilmente un buon punto per iniziare.
Tenendo a mente il vostro gusto personale, iniziate a pensare alle vostre condizioni di coltivazione. Volete coltivare in un piccolo armadio dove le piante piccole e a rapida maturazione come le varietà autofiorenti o le indica saranno più adatte per lo spazio ristretto? O avete un bel giardino dove poter coltivare una o più varietà giganti direttamente nel terreno o in larghi vasi?</string>
    <string name="sottoTitolo_metodo1_passo2">PASSO 2: NOZIONI FONDAMENTALI SULLA CANNABIS</string>
    <string name="contenuto_metodo1_passo2">Per coltivare al meglio ed ottenere le gemme più succose, dovete sapere che la vostra amata cannabis ha bisogno di alcuni elementi fondamentali.\n
        \n
        <b>LUCE:</b> Per una crescita vegetativa sana, la marijuana ha bisogno di oltre dodici ore di luce in un periodo temporale di ventiquattro ore. In ambiente chiuso ciò può essere controllato da voi tramite dei timer. La germinazione all\'aperto deve essere rinviata fino a quando le piante potranno essere esposte ad oltre dodici ore di luce diurna e ricevere almeno otto ore di luce solare diretta al giorno.\n
        \n
        <b>TERRENO DI COLTIVAZIONE:</b> I coltivatori organici useranno di volta in volta una certa tipologia di terreno, al chiuso o all\'aperto. Ad ogni modo, il terreno non è l\'unica opzione. I terreni neutri, completamente dipendenti dai nutrienti, includono fibra di cocco, perlite, vermiculite o lana di roccia. Le coltivazione aeroponiche, idroponiche pure o in deep water culture (DWC), sono totalmente prive di terreno. In questi contesti le radici sospese assorbono i nutrimenti direttamente dal mix nutritivo.\n
        \n
        <b>ARIA:</b> Per un vigoroso e adeguato scambio di gas, la cannabis ha bisogno di ricircolo di aria fresca. All\'aperto ciò non è un problema, le vostre piante saranno esposte a brezze e burrasche. Al chiuso, le piante avranno bisogno di aria sempre fresca, un tubo per aspirare l\'aria stantia ed una ventola per muovere l\'aria. Inoltre, le condizioni ambientali possono favorire parassiti, muffe e crescita debole. Un accumulo di gas esausti potrebbe inibire la crescita delle piante.\n
        \n
        <b>ACQUA:</b> Come tutti gli esseri viventi la cannabis ha bisogno di acqua per crescere, prosperare, e svolgere le sue funzioni biologiche. Se vivete in zone in cui piove regolarmente, le vostre piante all\'aperto probabilmente avranno dalla natura tutto ciò di cui hanno bisogno. Le piante di cannabis grandi sono notoriamente sempre assetate. Se volete coltivare in grande, avrete sicuramente bisogno di integrare l\'apporto di acqua tra una pioggia e l\'altra.\n
        \n
        Al chiuso, l\'acqua diventa il mezzo per trasportare le sostanze nutritive. L\'acqua non modificata viene usata per risciacquare regolarmente i sistemi idroponici e senza suolo. Il pH dell\'acqua è molto importante. Il coltivatore di cannabis saggio ha un buon misuratore di pH per completare il suo kit di coltivazione.\n
        \n
        <b>TEMPERATURA:</b> La cannabis è una pianta molto resistente e riesce a sopravvivere in climi caldi e freddi. Proprio come voi e me, però, può stressarsi e non funzionare a dovere in condizioni estreme. La cannabis può congelare o bollire fino alla morte. Potrebbe interrompere la sua crescita o entrare in una fase di inerzia. Entrerà in modalità di sopravvivenza se le temperatura restano troppo alte o troppo basse per un lungo periodo di tempo. Ventisette gradi centigradi è la temperatura ideale per una crescita rigogliosa delle piante di cannabis. Al chiuso è facile raggiungere questo obiettivo tramite l\'uso di ventole, unità di aria condizionata, tappetini riscaldanti o raffreddanti. La luce genererà sicuramente calore, che dovrà essere dissipato.\n
        \n
        All\'aperto, dovete scegliere le giuste tempistiche. Dovete conoscere a fondo il clima in cui vivete. Procuratevi una app o un grafico del ciclo solare e fate in modo di prendere i giusti tempi. Se è troppo presto rischiate di far fiorire le vostre piante immediatamente, e farle entrare di nuovo in fase vegetativa quando la luce del giorno aumenta. Questo va evitato. I fiori non si formeranno in modo adeguato se la fioritura inizia precocemente. Viceversa, se è troppo tardi avrete piante piccole con pochi fiori.\n
        \n
        <b>SOSTANZE NUTRITIVE:</b> Come tutti gli esseri viventi la cannabis ha anche bisogno di nutrimento per crescere. Un buon mix di terreno friabile, ricco di compost, organismi viventi, vitamine e minerali, può fornire alle vostre piante cibo a sufficienza per il loro intero ciclo vitale.\n
        \n
        Innaffiate con tè di compost (compost liquido) ed altri mix organici come melassa o farina di piume per migliorare la qualità del suolo e favorire una crescita sana per le vostre piante. Nei sistemi idroponici o suoli neutri, fornite tutta l\'energia alle vostre piante con miscele di nutrienti pre-confezionate. Spesso alcune sono fatte appositamente per le piante di marijuana. Le misture speciali sono realizzate esclusivamente per qualsiasi metodo di coltivazione senza suolo.\n
        \n
        <b>UMIDITÀ:</b> All\'aperto non avrete il controllo di questo elemento e sarete in balia del clima. Il lato positivo è che le variazioni di umidità e le robuste funzioni biologiche necessarie all\'adattamento in condizioni mutevoli, renderanno le vostre piante straordinariamente forti!\n
        \n
        Al chiuso, il controllo dell\'umidità è molto importante, dal seme al fiore. Una delle funzioni giornaliere delle foglie è quella di assorbire l\'umidità atmosferica. Un livello di umidità appropriato favorisce un ambiente sano, privo di parassiti e muffe.\n
        \n
        Armadietti, tende per coltivazione o grow room dedicate. Direttamente nel terreno o in vasi all\'aperto. Anche in un giardino con piante d\'accompagnamento la vostra marijuana dovrà soddisfare le sue esigenze per crescere sana e offrirvi gemme piene di resina di alta qualità.
    </string>
    <string name="sottoTitolo_metodo1_passo3">PASSO 3: LUCI PER LA COLTIVAZIONE DI CANNABIS INDOOR</string>
    <string name="contenuto_metodo1_passo3">Grazie alla legalizzazione, c\'è stato un boom nella scelta di luci e camere di coltivazione per coltivare cannabis indoor.\n
        \n
        Qui potete scegliere in base al budget che avete a disposizione.\n
        \n
        <b>ARMADI PER COLTIVAZIONE:</b> Realizzati grazie a decenni di esperienza diretta, sono disponibili armadi per coltivazione totalmente adattati alla coltivazione di cannabis e pronti all\'uso. Questo se avete migliaia di euro da spendere. Luci, ventole, spazio per separare cloni, camere di vegetazione e fioritura, timer e filtri a carbone sono tutti installati e pronti all\'uso.\n
        \n
        <b>LUCI PER OGNI BUDGET:</b> All\'opposto, potete procurarvi un set rudimentale di lampadine fluorescenti compatte (CFL) o piccoli pannelli a LED (Light Emitting Diode), per meno di trecento euro. Altre luci fluorescenti compatte come le luci lineari T5 sono disponibili in varie gamme di potenza per fase vegetativa e di fioritura, e sono adatte anche a spazi ristretti.\n
        \n
        Le lampade al sodio ad alta pressione (HPS - High-Pressure Sodium) e le lampade ad alogenuri metallici (MH - Metal Halide) sono tipologie tradizionali adatte per la coltivazione. Una lampada HPS da 1000W con riflettori, può illuminare in modo efficace uno spazio di 1,5x1,5 metri e favorire una crescita ottimale. Allo stesso modo, una lampada MH da 600W può illuminare la stessa area e agevolare la produzione di fiori di prima qualità alla fine del ciclo di crescita. Il calore generato da queste luci è un elemento che va tenuto in considerazione. Se il calore non viene dissipato in modo adeguato, il vostro ambiente di coltivazione diventerà presto troppo caldo per un corretto sviluppo delle piante.
    </string>
    <string name="sottoTitolo_metodo1_passo4">PASSO 4: GERMINAZIONE E PIANTINE DI MARIJUANA</string>
    <string name="contenuto_metodo1_passo4">All\'inizio della vostra avventura nella coltivazione della cannabis, c\'è la germinazione dei semi. Ogni seme contiene tutte le informazioni necessarie per formare la varietà di pianta che avete scelto. Gli servono solo le giuste condizioni ambientali, e inizierà il suo ciclo vitale. I semi non germoglieranno finché non sono stati raggiunti tre specifici obiettivi. Acqua, corretta temperatura (calore), e buon posizionamento.\n
        \n
        Coltivare la cannabis è un processo naturale, senza regole rigide. Non è un sistema lineare che va semplicemente imparato, ma un\'arte da padroneggiare con l\'esperienza. Esistono vari metodi, tutti ugualmente efficaci, per far germogliare la cannabis. Con il passare del tempo scoprirete il metodo più adatto a voi.\n
        \n
        <b>DIRETTAMENTE NEL TERRENO:</b> Posizionate i semi direttamente nel terreno. Questo eviterà qualsiasi stress o shock da trapianto. Spesso è più semplice far germogliare i semi in un vaso piccolo, e poi spostare le piantine nella terra del giardino o in vasi più grandi.\n
        \n
        <b>TOVAGLIOLO DI CARTA:</b> I semi vanno messi su un tovagliolo di carta umido posizionato su un piatto, e tenuti in un ambiente buio e caldo. In genere si ricoprono con un telo di plastica o un piatto rovesciato per trattenere l\'umidità. Dopo alcuni giorni o una settimana, i semi saranno germogliati.\n
        \n
        <b>STARTER IN CUBETTI, VASETTI E LANA DI ROCCIA:</b> Facili da gestire, perché con essi è possibile avere cinquanta semi in fase di germoglio in poco spazio. Dopo che le piantine sono spuntate, potete trasferirle nella destinazione finale senza danneggiare le radici.\n
        \n
        <b>IN ACQUA:</b> Immergete semplicemente i semi in acqua arricchita con enzimi, finché vedrete spuntare la radice a fittone, quindi trasferiteli nel terreno. Le piantine cresceranno in fretta e spunteranno dalla superficie una settimana dopo circa.\n
        \n
        <b>SERRE DI GERMINAZIONE:</b> Le serre di germinazione offrono un controllo sostanziale sull\'ambiente di germinazione, in particolare sui livelli di umidità e temperatura, e possono accelerare i tempi di germinazione.\n
        \n
        Quando le vostre piante emergono dalla superficie e i cotiledoni hanno completato la muta del seme, rivelando il primo set di vere foglie, ha inizio la fotosintesi. Ora avete una vera e propria piantina di marijuana, pronta a diventare una piccola miniatura produttrice di resina indoor, o uno spettacolare albero all\'aperto.
    </string>
    <string name="sottoTitolo_metodo1_passo5">PASSO 5: LA FASE VEGETATIVA DELLA CANNABIS</string>
    <string name="sottoTitolo_metodo1_passo6">PASSO 6: LA FASE DI FIORITURA IN UNA PIANTA DI MARIJUANA SANA</string>
    <string name="sottoTitolo_metodo1_passo7">PASSO 7: RACCOLTA, ESSICCAZIONE &amp; TRATTAMENTO PER GEMME DI QUALITÀ</string>
</resources>